Issue 176: WindowIterator getWindow methods to return Number[][] and getWindowInt methods to return int[][] Issue 177: Fixed typing of outside value returned by AbstractSimpleIterator
git-svn-id: https://jaitools.googlecode.com/svn/trunk@1703 07dc4d45-bd82-665a-fa80-c0abab6b2a50